# HTTPServer

./: .gitignore  CMakeLists  CMakeLists.txt  README.md  build_log.txt  config.ini  install_output.txt  pid.txt  test.sh
.claude/: settings.local.json
data/: users.db
src/: auth_db.c  auth_db.h  buffer.h  config.c  config.h  file.c  file.h  http.c  http.h  main.c  serve.c  serve.h  server.c  server.h  threadpool.c  threadpool.h
www/: 01-OSI七层模型.html  02-Socket编程概念.html  03-预备知识.html  04-创建一个TCP服务器及客户端.html  05-一次连接多次请求.html  06-并发请求.html  07-发送指令.html  08-解析指令并返回.html  09-存储KV.html  breadcrumb.js  index.html  login.html  register.html  示例-echo服务器.html  示例-web服务器.html  项目案例-网络服务器.html
